# dpgen2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: pub-docker.yml  pyright.yml  test.yml
block-4lbmr/iter-002--collect-data/: script
block-4lbmr/iter-002--prep-fp/: script
block-4lbmr/iter-002--prep-lmp/: script
block-4lbmr/iter-002--prep-train/: script
block-4lbmr/iter-002--run-fp-000000/: script
block-4lbmr/iter-002--run-fp-000001/: script
block-4lbmr/iter-002--run-lmp-000000/: script
block-4lbmr/iter-002--run-lmp-000001/: script
block-4lbmr/iter-002--run-lmp-000002/: script
block-4lbmr/iter-002--run-lmp-000003/: script
block-4lbmr/iter-002--run-lmp-000004/: script
block-4lbmr/iter-002--run-lmp-000005/: script
block-4lbmr/iter-002--run-train-0000/: script
block-4lbmr/iter-002--run-train-0001/: script
block-4lbmr/iter-002--run-train-0002/: script
block-4lbmr/iter-002--select-confs/: script
block-4lbmr/run-fp-init-artifact-u79xh/: script
block-4lbmr/run-lmp-init-artifact-yj9s8/: script
block-4lbmr/run-train-init-artifact-p3vns/: script
block-wxlaf/iter-002--collect-data/: script
block-wxlaf/iter-002--prep-fp/: script
block-wxlaf/iter-002--prep-lmp/: script
block-wxlaf/iter-002--prep-train/: script
block-wxlaf/iter-002--run-fp-000000/: script
block-wxlaf/iter-002--run-fp-000001/: script
block-wxlaf/iter-002--run-lmp-000000/: script
block-wxlaf/iter-002--run-lmp-000001/: script
block-wxlaf/iter-002--run-lmp-000002/: script
block-wxlaf/iter-002--run-lmp-000003/: script
block-wxlaf/iter-002--run-lmp-000004/: script
block-wxlaf/iter-002--run-lmp-000005/: script
block-wxlaf/iter-002--run-train-0000/: script
block-wxlaf/iter-002--run-train-0001/: script
block-wxlaf/iter-002--run-train-0002/: script
block-wxlaf/iter-002--select-confs/: script
block-wxlaf/run-fp-init-artifact-cowvn/: script
block-wxlaf/run-lmp-init-artifact-vibla/: script
block-wxlaf/run-train-init-artifact-qe39y/: script
block-zhv63/iter-002--collect-data/: script
block-zhv63/iter-002--prep-fp/: script
block-zhv63/iter-002--prep-lmp/: script
block-zhv63/iter-002--prep-train/: script
block-zhv63/iter-002--run-fp-000000/: script
docs/: conf.py  input.md  quickcli.md  submit_args.rst
dpgen2/: __init__.py  constants.py
dpgen2/conf/: __init__.py  (+4 more)
plans/: ase_exploration.md
tests/: check_examples.py  context.py  fake_data_set.py  mocked_ops.py  test_block_cl.py  test_caly_evo_step.py  test_check_examples.py  test_collect_data.py  test_dpgen_loop.py  test_entrypoint_ase.py  test_finetune.py  test_merge_caly_evo_step.py  test_prep_lmp.py  test_prep_run_ase.py  test_prep_run_caly.py  test_prep_run_diffcsp.py  test_prep_run_dp_labeling.py  test_prep_run_dp_train.py  test_prep_run_lmp.py  test_prep_run_vasp.py  test_select_confs.py
(+3066 files in other folders)
