[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "dpgen2"
dynamic = ["version"]
description = "DPGEN2: concurrent learning workflow generating the machine learning potential energy models."
authors = [
  {name = "DeepModeling"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
	     'numpy',
	     'dpdata>=0.2.20',
	     'pydflow>=1.8.97',
	     'dargs>=0.3.1',
	     'scipy',
	     'lbg',
	     'packaging',
	     'fpop',
	     'dpgui',
             'cp2kdata',
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["deep potential", "concurrent learning", "work flow"]

[project.urls]
Homepage = "https://github.com/deepmodeling/dpgen2"
documentation = "https://docs.deepmodeling.com/projects/dpgen2"
repository = "https://github.com/deepmodeling/dpgen2"

[project.scripts]
dpgen2 = "dpgen2.entrypoint.main:main"

[project.entry-points."dpgui"]
"DP-GEN2 Submit" = "dpgen2.entrypoint.args:submit_args"

[project.optional-dependencies]
docs = [
     'sphinx',
     'recommonmark',
     'sphinx-book-theme',
     'numpydoc',
     'myst_parser',
     'deepmodeling-sphinx>=0.3.0',
     'sphinx-argparse<0.5.0',
     "dargs>=0.4.1",
]
test = [
     'fakegaussian>=0.0.3',
    'dpgui',
]
gui = [
    'dpgui',
]

[tool.setuptools.packages.find]
include = ["dpgen2*"]

[tool.setuptools.package-data]
dpgen2 = ['*.json']

[tool.setuptools_scm]
write_to = "dpgen2/_version.py"

[tool.pyright]
include = [
     "dpgen2",
]
exclude = [
    "dpgen2/_version.py",
]

[tool.isort]
profile = "black"
force_grid_wrap = 1

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # errors
    "W", # warning
    "F", # pyflakes
    "RUF", # ruff
    "NPY", # numpy
    "DTZ", # datetime
]
ignore = [
    "E501", # line too long
    "F841", # local variable is assigned to but never used
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D100", # TODO: missing docstring in public module
    "D101", # TODO: missing docstring in public class
    "D102", # TODO: missing docstring in public method
    "D103", # TODO: missing docstring in public function
    "D104", # TODO: missing docstring in public package
    "D105", # TODO: missing docstring in magic method
    "D205", # 1 blank line required between summary line and description
    "D401", # TODO: first line should be in imperative mood
    "D404", # TODO: first word of the docstring should not be This
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.lint.pycodestyle]
max-line-length = 120
